--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>ca.bc.gov.open.digitalforms</groupId>
+			<artifactId>digitalforms-openapi-spec</artifactId>
+			<version>1.0.0</version>
+        </dependency>
+	
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
