--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </properties>
 
     <modules>
+    	<module>digitalforms-openapi-spec</module>
         <module>digitalforms-api</module>
     </modules>
 
