--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -17,6 +17,13 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+	
+		<dependency>
+            <groupId>ca.bc.gov.open.digitalformsapi.viirp</groupId>
+    		<artifactId>digitalforms-api-specification</artifactId>
+    		<version>1.0-SNAPSHOT</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
