final commit of working API (Search operations only)

--- a/digitalforms-api-specification/pom.xml
+++ b/digitalforms-api-specification/pom.xml
@@ -150,7 +150,7 @@
                             <modelPackage>ca.bc.gov.open.digitalformsapi.viirp.model</modelPackage>
                             <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                             <configOptions>
-                                <delegatePattern>false</delegatePattern>
+                                <delegatePattern>true</delegatePattern>
                             </configOptions>
                         </configuration>
                     </execution>
