--- a/digitalforms-api-specification/pom.xml
+++ b/digitalforms-api-specification/pom.xml
@@ -12,12 +12,12 @@
         <java.version>11</java.version>
 
         <swagger-annotations-version>1.6.6</swagger-annotations-version>
+        <springdoc-openapi-ui-version>1.6.9</springdoc-openapi-ui-version>
         <jersey-version>2.27</jersey-version>
         <jackson-version>2.10.2</jackson-version>
         <jodatime-version>2.7</jodatime-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
         <junit-version>4.8.1</junit-version>
-        <springfox-version>2.9.2</springfox-version>
         <threetenbp-version>1.3.8</threetenbp-version>
         <datatype-threetenbp-version>2.6.4</datatype-threetenbp-version>
         <spring-boot-starter-test-version>2.7.1</spring-boot-starter-test-version>
@@ -108,7 +108,7 @@
         <dependency>
         	<groupId>org.springdoc</groupId>
 	      	<artifactId>springdoc-openapi-ui</artifactId>
-	      	<version>1.6.9</version>
+	      	<version>${springdoc-openapi-ui-version}</version>
 		</dependency>
         <dependency>
             <groupId>com.github.joschi.jackson</groupId>
