Added SB actuator

--- a/digitalforms-api/src/main/resources/application.properties
+++ b/digitalforms-api/src/main/resources/application.properties
@@ -4,3 +4,15 @@
 
 server.port=8082
 server.servlet.context-path=/digitalforms-viirp/v1
+
+# Actuator endpoint exposure
+management.endpoints.web.exposure.include=health
+
+# Actuator bean time to live. Inhibits caching of 'No param' endpoints. 
+management.endpoint.beans.cache.time-to-live=10s
+
+#Actuator Health Endpoint Configuration
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+
+
