--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -33,6 +33,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		
+		<!-- VIPS ORDS library dependency linked submodule (Shared with DPS and Digital Forms Reviews) -->
+		<dependency>
+			<groupId>ca.bc.gov.open</groupId>
+			<artifactId>jag-vips-client</artifactId>
+			<version>0.1.0</version>
+			<scope>compile</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
