--- a/digitalforms-api/src/main/resources/application.properties
+++ b/digitalforms-api/src/main/resources/application.properties
@@ -15,4 +15,9 @@ management.endpoint.beans.cache.time-to-live=10s
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
 
+# VIPS ORDS CLIENT properties
+vips.client.basePath=${DIGITALFORMS_VIPSORDS_BASEPATH}
+vips.client.username=${DIGITALFORMS_VIPSORDS_USER} 
+vips.client.password=${DIGITALFORMS_VIPSORDS_PASSWORD}
+
 
