--- a/digitalforms-api/src/main/resources/application.properties
+++ b/digitalforms-api/src/main/resources/application.properties
@@ -20,4 +20,7 @@ vips.client.basePath=${DIGITALFORMS_VIPSORDS_BASEPATH}
 vips.client.username=${DIGITALFORMS_VIPSORDS_USER} 
 vips.client.password=${DIGITALFORMS_VIPSORDS_PASSWORD}
 
+##logging.level.root=DEBUG
+##logging.pattern.console=%-4relative [%thread] %-5level %logger{35} %X{CorrelationId} --- %msg %n
+
 
