--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -41,6 +41,17 @@
 			<version>0.1.0</version>
 			<scope>compile</scope>
 		</dependency>
+		
+		<!-- logback -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
