--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -34,6 +34,18 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		
+		<!-- Lombok code generator -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
 		<!-- VIPS ORDS library dependency linked submodule (Shared with DPS and Digital Forms Reviews) -->
 		<dependency>
 			<groupId>ca.bc.gov.open</groupId>
