Added config properties class to have a dedicated config class for externalizing env variables to map into the properties in this class from application.yaml. Moved all config properties from constants class to properties class.

--- a/digitalforms-api/src/main/resources/application.yml
+++ b/digitalforms-api/src/main/resources/application.yml
@@ -4,15 +4,15 @@
 
 endpoint:
   vips-rest-api:
-    password: ${DIGITALFORMS_VIPSAPI_PASSWORD}
-    url: ${DIGITALFORMS_VIPSAPI_URL}
-    username: ${DIGITALFORMS_VIPSAPI_USERNAME}
-    timeout: ${DIGITALFORMS_VIPSAPI_TIMEOUT}
+    password: ${DIGITALFORMS_VIPSAPI_PASSWORD:}
+    url: ${DIGITALFORMS_VIPSAPI_URL:}
+    username: ${DIGITALFORMS_VIPSAPI_USERNAME:}
+    timeout: ${DIGITALFORMS_VIPSAPI_TIMEOUT:2000}
     retry:
       # The maximum number of retry attempts to allow
-      count: ${DIGITALFORMS_VIPSAPI_RETRY_COUNT}
+      count: ${DIGITALFORMS_VIPSAPI_RETRY_COUNT:3}
       # The Duration of the fixed delays
-      delay: ${DIGITALFORMS_VIPSAPI_RETRY_DELAY}
+      delay: ${DIGITALFORMS_VIPSAPI_RETRY_DELAY:5}
       
     
 management:
