--- a/digitalforms-api/pom.xml
+++ b/digitalforms-api/pom.xml
@@ -39,13 +39,6 @@
 		    <artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		
-		<!-- Lombok code generator -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		
 		<!-- VIPS ORDS library dependency linked submodule (Shared with DPS and Digital Forms Reviews) -->
 		<dependency>
 			<groupId>ca.bc.gov.open</groupId>
@@ -75,6 +68,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
