--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>jag-vips-client/src/jag-vips-client</module>
 		<module>digitalforms-api-specification</module>
         <module>digitalforms-api</module>
+        <module>jag-digitalforms-client</module>
     </modules>
 
 </project>
