--- a/openshift/build-params.yml
+++ b/openshift/build-params.yml
@@ -7,4 +7,4 @@ GIT_REPO_DEPLOY_KEY: vips-api-repo-key
 SOURCE_REPOSITORY_REF: new2
 SOURCE_IMAGE_NAME: vips-api-buildimage
 SOURCE_IMAGE_TAG: "1.0"
-SOURCE_IMAGE_NAMESPACE: amlana21-dev
+SOURCE_IMAGE_NAMESPACE: c220ad-tools
