--- a/openshift/build-params.yml
+++ b/openshift/build-params.yml
@@ -8,3 +8,4 @@ SOURCE_REPOSITORY_REF: new2
 SOURCE_IMAGE_NAME: vips-api-buildimage
 SOURCE_IMAGE_TAG: "1.0"
 SOURCE_IMAGE_NAMESPACE: c220ad-tools
+BUILD_CONFIG_SUFFIX: -build
