--- a/openshift/api-build.yml
+++ b/openshift/api-build.yml
@@ -50,7 +50,7 @@ objects:
         type: Git
         git:
           uri: ${SOURCE_REPOSITORY_URL}
-          ref: ${SOURCE_REPOSITORY_REF}-1
+          ref: ${SOURCE_REPOSITORY_REF}
         # sourceSecret:
         #   name: ${GIT_REPO_DEPLOY_KEY}
       completionDeadlineSeconds: 1440
