--- a/openshift/api-deploy.yml
+++ b/openshift/api-deploy.yml
@@ -3,13 +3,13 @@ kind: Template
 metadata: {}
 parameters:
 - name: NAME
-  value: vips
+  # value: vips
 - name: COMPONENT
-  value: restapi
+  # value: restapi
 - name: PHASE
 - name: SUFFIX
-  value: -dev
-- name: VERSION
+  # value: -dev
+# - name: VERSION
 - name: HOST
 - name: LOG_LEVEL
   value: 'INFO'
@@ -27,16 +27,19 @@ parameters:
   displayName: Memory upper limit
   description: Memory upper limit
 - name: NAMESPACE
-  value: amlana21-dev
-- name: IMAGE_NAME
-  value: vips-api-image
+  # value: 
+- name: BUILD_VERSION
+- name: IMAGE_NAMESPACE
+# - name: IMAGE_NAME
+#   value: 
 - name: IMAGE_TAG
-  value: "1.1"
+  # value: "1.1"
 objects:
 - apiVersion: apps/v1
   kind: Deployment
   metadata:
     creationTimestamp: null
+    namespace: ${NAMESPACE}
     labels:
       app: ${NAME}-${COMPONENT}${SUFFIX}
     name: ${NAME}-${COMPONENT}${SUFFIX}
@@ -53,7 +56,7 @@ objects:
           app: ${NAME}-${COMPONENT}${SUFFIX}
       spec:
         containers:
-        - image: image-registry.openshift-image-registry.svc:5000/${NAMESPACE}/${IMAGE_NAME}:${IMAGE_TAG}
+        - image: image-registry.openshift-image-registry.svc:5000/${IMAGE_NAMESPACE}/${NAME}-image:${BUILD_CONFIG_SUFFIX}-${BUILD_VERSION}
           name: ${NAME}-${COMPONENT}${SUFFIX}
           resources:
             limits:
