--- a/digitalforms-api-specification/pom.xml
+++ b/digitalforms-api-specification/pom.xml
@@ -20,8 +20,7 @@
         <junit-version>4.8.1</junit-version>
         <threetenbp-version>1.3.8</threetenbp-version>
         <datatype-threetenbp-version>2.6.4</datatype-threetenbp-version>
-        <spring-boot-starter-test-version>2.7.1</spring-boot-starter-test-version>
-        <spring-boot-starter-web-version>2.7.1</spring-boot-starter-web-version>
+        <spring-boot-version>2.7.1</spring-boot-version>
         <junit-version>4.12</junit-version>
         <migbase64-version>2.2</migbase64-version>
         <jackson-databind-nullable>0.2.1</jackson-databind-nullable>
@@ -97,14 +96,19 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring-boot-starter-test-version}</version>
+            <version>${spring-boot-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot-starter-web-version}</version>
+            <version>${spring-boot-version}</version>
         </dependency>
+        <dependency> 
+    		<groupId>org.springframework.boot</groupId> 
+    		<artifactId>spring-boot-starter-validation</artifactId>
+    		<version>${spring-boot-version}</version> 
+		</dependency>
         <dependency>
         	<groupId>org.springdoc</groupId>
 	      	<artifactId>springdoc-openapi-ui</artifactId>
