--- a/openshift/api-deploy.yml
+++ b/openshift/api-deploy.yml
@@ -35,6 +35,7 @@ parameters:
 #   value: 
 - name: IMAGE_TAG
   # value: "1.1"
+- name: API_VERSION
 objects:
 - apiVersion: apps/v1
   kind: Deployment
@@ -42,23 +43,23 @@ objects:
     creationTimestamp: null
     namespace: ${NAMESPACE}
     labels:
-      app: ${NAME}-${COMPONENT}${SUFFIX}
-    name: ${NAME}-${COMPONENT}${SUFFIX}
+      app: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
+    name: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
   spec:
     replicas: 1
     selector:
       matchLabels:
-        app: ${NAME}-${COMPONENT}${SUFFIX}
+        app: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
     strategy: {}
     template:
       metadata:
         creationTimestamp: null
         labels:
-          app: ${NAME}-${COMPONENT}${SUFFIX}
+          app: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
       spec:
         containers:
         - image: image-registry.openshift-image-registry.svc:5000/${IMAGE_NAMESPACE}/${NAME}-image:${BUILD_CONFIG_SUFFIX}-${BUILD_VERSION}
-          name: ${NAME}-${COMPONENT}${SUFFIX}
+          name: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
           resources:
             limits:
               cpu: 80m
@@ -79,14 +80,14 @@ objects:
     creationTimestamp: null
     namespace: ${NAMESPACE}
     labels: null
-    name: ${NAME}-${COMPONENT}${SUFFIX}
+    name: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
   spec:
     maxReplicas: 2
     minReplicas: 1
     scaleTargetRef:
       apiVersion: v1
       kind: Deployment
-      name: ${NAME}-${COMPONENT}${SUFFIX}
+      name: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
     targetCPUUtilizationPercentage: 85
 - apiVersion: v1
   kind: Service
@@ -94,7 +95,7 @@ objects:
     annotations:
       openshift.io/generated-by: OpenShiftNewApp
     creationTimestamp: null
-    name: ${NAME}-${COMPONENT}${SUFFIX}
+    name: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
     namespace: ${NAMESPACE}
   spec:
     ports:
@@ -103,14 +104,14 @@ objects:
       protocol: TCP
       targetPort: 8080
     selector:
-      app: ${NAME}-${COMPONENT}${SUFFIX}
+      app: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
   status:
     loadBalancer: {}
 - apiVersion: v1
   kind: Route
   metadata:
     creationTimestamp: null
-    name: ${NAME}-${COMPONENT}${SUFFIX}
+    name: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
     namespace: ${NAMESPACE}
   spec:
     # host: ${NAME}-${COMPONENT}${SUFFIX}
@@ -121,6 +122,6 @@ objects:
       termination: edge
     to:
       kind: Service
-      name: ${NAME}-${COMPONENT}${SUFFIX}
+      name: ${NAME}-${COMPONENT}${SUFFIX}-${API_VERSION}
       weight: 100
     wildcardPolicy: None
