Commit of GET Impoundment Unit Tests

--- a/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
+++ b/digitalforms-api-specification/src/main/resources/VI_IRP_V1.yaml
@@ -27,7 +27,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateImpoundment'
-        required: false
+        required: true
       responses:
         201:
           description: Created
