--- a/openshift/api-deploy.yml
+++ b/openshift/api-deploy.yml
@@ -31,6 +31,8 @@ parameters:
 - name: BUILD_VERSION
 - name: BUILD_CONFIG_SUFFIX
 - name: IMAGE_NAMESPACE
+- name: SECRET1_NAME
+- name: SECRET2_NAME
 # - name: IMAGE_NAME
 #   value: 
 - name: IMAGE_TAG
@@ -67,9 +69,11 @@ objects:
             requests:
               cpu: 60m
               memory: 64Mi
-          env:
-            - name: TEST_ENV
-              value: testing
+          envFrom:
+          - secretRef:
+              name: ${SECRET1_NAME}
+          - secretRef:
+              name: ${SECRET2_NAME}
           ports:
             - containerPort: 8080
               protocol: TCP
